2004-12-31 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/logf.c: added mcs51 assembly version
	* device/lib/expf.c: added mcs51 assembly version
	* device/lib/_logexpf.c: new shared asm code for expf and logf
	* device/include/math.h: add defines for assembly math library
	* device/lib/Makefile.in: build new _logexpf.c
	* device/lib/libfloat.lib: use new _logexpf.c

2004-12-29 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/device.c
	* src/pic/pcode.c : adjusted internal stack and pre-allocated registers for
	  device types which have less than 0x7f registers.

2004-12-29 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/genarith.c : Fixed problem with subtraction where the result would not be updated when borrowing.

2004-12-28 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/printf_fast.c: only build on supported arch.
	* device/lib/printf_tiny.c: only build on supported arch.
	* device/lib/printf_fast_f.c: only build if asm float lib
	* device/lib/_fsget1arg.c: only build if asm float lib
	* device/lib/_fsget2args.c: only build if asm float lib
	* device/lib/_fsnormalize.c: only build if asm float lib
	* device/lib/_fsreturnval.c: only build if asm float lib
	* device/lib/_fsrshift.c: only build if asm float lib
	* device/lib/_fsswapargs.c: only build if asm float lib
	* device/include/stdio.h: don't provide print_fast,
	  print_fast_f, print_tiny prototypes if --xstack used

2004-12-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/sincosf.c (sincosf): don't invert bit/bool by ~
	* support/regression/ports/mcs51-stack-auto/spec.mk: added new _fs.. files
	  to the SOURCES

2004-12-28 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/printf_fast_f.c: same as printf_fast, but
	  with floating point enabled
	* device/lib/printf_fast.c: minor tweaks
	* device/include/stdio.h: add printf_fast_f

2004-12-27 Paul Stoffregen <paul AT pjrc.com>

	* src/SDCCmain.c: make --float-reent default for mcs51